# folio

./: .dockerignore  .gitignore  .stignore  AGENTS.md  Dockerfile  HANDOFF.md  README.md  Tiltfile  app.py  config.py  docker-compose.yml  docker-entrypoint.sh  lefthook.yml  mise.momokaya.toml  mise.toml  normalization.py  okteto.yml  parse.py  pyproject.toml  pyrightconfig.json  renovate.json  rxconfig.py  skills-lock.json  storage.py
.codex/: config.toml
.codex/agents/: pipeline-acceptance-reviewer.toml  pipeline-code-writer.toml  pipeline-epic-router.toml  pipeline-inspector.toml  pipeline-learner.toml  pipeline-researcher.toml  pipeline-test-writer.toml  pipeline-thermo-nuclear-reviewer.toml  pipeline-verifier.toml
.github/: actionlint.yaml
.github/workflows/: e2e.yml  publish-image.yml  publish.yml
.momokaya/: README.md  env.yaml
.opencode/: opencode.json
.opencode/agents/: MoKa Acceptance Reviewer.md  MoKa Code Writer.md  MoKa Inspector.md  MoKa Learner.md  MoKa Orchestrator.md  MoKa Researcher.md  MoKa Schedule Planner.md  MoKa Test Writer.md  MoKa Thermo Nuclear Reviewer.md  MoKa Verifier.md
.opencode/commands/: execute.md  inspect.md  quick.md
.opencode/plugins/: pipeline-goal-context.ts
alembic/versions/: 1a9aeed14a36_.py
backlog/: config.yml
backlog/completed/: folio-10 - Improve-app-UI-and-simplify-styling.md  folio-11 - Add-Tilt-local-Kubernetes-workflow.md  folio-8.1 - Document-scanner-and-folder-watcher.md  folio-8.2 - AI-powered-structured-financial-data-extraction-from-accounting-documents.md  folio-8.3 - Financial-data-store-—-persist-and-query-extracted-accounting-data.md  folio-8.5 - Add-header-navigation-linking-Index-and-Files-and-future-Data-pages.md  folio-8.6 - Build-data-page-—-queryable-view-over-the-Postgres-financial-store.md  folio-8.7 - Add-totals-aggregates-summary-widget-for-the-financial-store.md  folio-8.8 - Show-ingestion-confirmation-—-link-from-batch-row-to-stored-file-and-DB-record.md  folio-8.9 - Download-all-—-zip-export-of-files-for-a-selected-month-on-the-files-page.md  folio-9 - Migrate-frontend-to-Reflex.md  folio-9.1 - Scaffold-Reflex-app-replace-Flask-dependency-and-initialize-project-structure.md  folio-9.2 - Port-Alpine.js-store-to-Reflex-AppState-with-non-streaming-event-handlers.md  folio-9.3 - Implement-upload-handler-parse-streaming-bridge-save-and-retry-event-handlers.md  folio-9.4 - Build-Reflex-UI-components-header-file-picker-results-table-log-panel.md  folio-9.5 - Wire-main-page-remove-Flask-files-verify-single-command-startup.md
backlog/tasks/: folio-1 - Estonian-work-order-generation-with-AI-assistance.md  folio-1.1 - Design-Estonian-work-order-template-and-data-model.md  folio-1.2 - AI-powered-work-order-generation-from-free-form-text-input.md  folio-1.3 - PDF-export-for-generated-work-orders.md  folio-10 - Improve-app-UI-and-simplify-styling.md  folio-12 - Make-Reflex-Docker-production-build-deterministic.md  folio-13 - Materialize-Folio-OpenCode-auth-from-sealed-cluster-secret.md  folio-14 - Clean-up-Folio-deployment-health-and-image-publishing.md  folio-2 - Äriregister-client-lookup-—-auto-fill-company-details-from-Estonian-Business-Registry.md  folio-3 - EMTA-tax-deadline-calendar-for-Estonian-OÜ-owners.md  folio-4 - Dividend-vs-salary-calculator-for-Estonian-OÜ-tax-optimisation.md  folio-8.1 - Document-scanner-and-folder-watcher.md  (+13 more)
chart/: Chart.yaml  values.dev.yaml  values.yaml
e2e/: package-lock.json  package.json  playwright.config.ts
folio/: __init__.py  aws.py  config.py  db_models.py  doc_models.py  folio.py  log_parser.py  models.py  normalization.py  parse.py  state.py  storage.py  styles.py
k8s/: deployment.yaml  service.yaml
static/: store.js
templates/: index.html
tests/: _helpers.py  conftest.py  test_app_e2e.py  test_data_view.py  test_db.py  test_doc_models.py  test_exports.py  test_log_parser.py  test_normalization.py  test_parse.py  test_parse_emit.py  test_state_events.py  test_state_flows.py  test_state_save.py  test_storage.py
(+62 files in other folders)
