[project]
name = "folio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
  "babel>=2.18.0",
  "cleanco>=2.3",
  "dateparser>=1.4.0",
  "ftfy>=6.3.1",
  "polars>=1.40.1",
  "price-parser>=0.5.1",
  "pycountry>=26.2.16",
  "pydantic>=2.13.4",
  "python-slugify>=8.0.4",
  "rapidfuzz>=3.14.5",
  "reflex>=0.9.2.post1",
  "titlecase>=2.4.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.1",
    "ruff>=0.15.13",
]

[tool.setuptools.packages.find]
include = ["folio*"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "RUF012",   # Reflex State mutable defaults required by metaclass
  "TC001",    # app imports needed at runtime by Reflex annotation evaluation
  "TC003",    # stdlib imports needed at runtime by Reflex annotation evaluation
  "N815",     # InvoiceData fields match opencode camelCase JSON schema
  "DTZ011",   # date.today() used intentionally to support test monkeypatching
]
