[project]
name = "folio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
  "babel>=2.18.0",
  "boto3>=1.35",
  "cleanco>=2.3",
  "dateparser>=1.4.0",
  "ftfy>=6.3.1",
  "polars[rtcompat]>=1.40.1",
  "price-parser>=0.5.1",
  "psycopg2-binary>=2.9",
  "pycountry>=26.2.16",
  "pydantic>=2.13.4",
  "python-slugify>=8.0.4",
  "rapidfuzz>=3.14.5",
  "reflex[db]>=0.9.2.post1",
  "sqlmodel>=0.0.22",
  "titlecase>=2.4.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "testcontainers[minio,postgres]>=4.7",
    "time-machine>=3.2.0",
]

[tool.setuptools.packages.find]
include = ["folio*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Reflex's State metaclass reads class-level annotations and mutable defaults at
# runtime, and rx.foreach inspects callback signatures at runtime — so the usual
# ClassVar / TYPE_CHECKING patterns don't apply to State files or components.
"folio/states/*.py" = [
  "RUF012",  # mutable class defaults are the declarative state schema
  "TC001",   # app-internal imports used in runtime-evaluated annotations
  "TC003",   # stdlib imports used in runtime-evaluated annotations
]
"folio/services/ingestion.py" = [
  "TC001",   # app-internal imports used in runtime-evaluated annotations
]
"folio/components/*.py" = [
  "RUF012",  # mutable class defaults are the declarative state schema
  "TC001",   # app-internal imports used in runtime-evaluated annotations
]

[tool.ruff.lint.pydocstyle]
convention = "google"
